# FLA

dfa2re/: CMakeCache.txt  Makefile  cmake_install.cmake  dfa2re  dfa2re.in  dfa2re.out  task.cpp
dfa_minim/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dfa_minim  dfa_minim.in  main.cpp  quick_setup.sh  task.cpp
re2dfa/: CMakeCache.txt  Makefile  cmake_install.cmake  re2dfa  re2dfa.out  task.cpp
